<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TPadGameActivity" >

    <LinearLayout
        android:id="@+id/llSeekBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <Button
            android:id="@+id/btnNewGame"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/btnExplore"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/explore" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:text="@string/frequency"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:max="75000"
            android:layout_weight="1.14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingStart="5dp"
            android:text="Medium Text"
            android:id="@+id/freqText" />
    </LinearLayout>

    <!-- <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="200dp" />
     <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="200dp" />    
    
    <nxr.tpadnexus.lib.views.FrictionMapView
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="200dp" /> -->

    <RelativeLayout
        android:id="@+id/touchViewBorder"
        android:layout_width="610dp"
        android:layout_height="410dp"
        android:background="#d3d3d3"
        android:layout_alignParentBottom="true"
        android:gravity="center" >

        <nxr.tpadnexus.lib.views.BlackWhiteView
            android:id="@+id/touchView"
            android:layout_alignParentBottom="true"
            android:layout_width="600dp"
            android:layout_height="400dp" />

        <RelativeLayout
            android:id="@+id/rlCover"
            android:layout_alignParentBottom="true"
            android:layout_width="600dp"
            android:layout_height="400dp"
            android:visibility="invisible"
            android:background="#ff000000">
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlAnswers"
            android:layout_alignParentBottom="true"
            android:layout_width="600dp"
            android:layout_height="400dp"
            android:visibility="invisible"
            android:background="#ff000000"
            android:gravity="center">
            <Button
                android:id="@+id/btnAnswer1"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:text="@string/answer_1" />
            <Button
                android:id="@+id/btnAnswer2"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_toEndOf="@id/btnAnswer1"
                android:text="@string/answer_2" />
            <Button
                android:id="@+id/btnAnswer3"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_below="@id/btnAnswer1"
                android:layout_alignLeft="@id/btnAnswer1"
                android:text="@string/answer_3" />
            <Button
                android:id="@+id/btnAnswer4"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_below="@id/btnAnswer2"
                android:layout_alignLeft="@id/btnAnswer2"
                android:text="@string/answer_4" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlCounter"
        android:layout_width="100dp"
        android:layout_height="400dp"
        android:layout_alignTop="@id/touchViewBorder"
        android:layout_toEndOf="@id/touchViewBorder"
        android:background="#ff000000"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tvTimerLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/time_remaining" />
        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvTimerLabel"
            android:gravity="center"
            android:textSize="70sp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/next"
            android:visibility="invisible"
            android:textSize="25sp"
            android:onClick="newRound" />

        <Button
            android:id="@+id/btnAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/answer"
            android:visibility="invisible"
            android:textSize="20sp"
            android:onClick="answerEarly" />

        <TextView
            android:id="@+id/tvCounter"
            android:textSize="70sp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />
        <TextView
            android:id="@+id/tvCounterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tvCounter"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/correct" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlButtons"
        android:background="#ff000000"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/touchViewBorder"
        android:layout_below="@id/llSeekBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="400dp" >

        <Button
            android:id="@+id/btnTriangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/triangle"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnCircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnTriangle"
            android:text="@string/circle"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnSquare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnCircle"
            android:text="@string/square"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnHalfCircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnSquare"
            android:text="@string/half_circle"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnGemStone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnHalfCircle"
            android:text="@string/gem_stone"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnClover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnGemStone"
            android:text="@string/clover"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnStar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnClover"
            android:text="@string/star"
            android:textSize="25sp" />

    </RelativeLayout>
    

</RelativeLayout>